# glinvci

./: .Rbuildignore  .build.yml  .gitignore  .travis.yml  DESCRIPTION  NAMESPACE  README.md  cleanup  configure  configure.ac
R/: deriv_missing.R  glinvci.R  graph.R  missingness.R  ou.R  restrictions.R  utils.R
man/: clone_model.Rd  fit.glinv.Rd  get_restricted_ou.Rd  glinv.Rd  glinv_gauss.Rd  glinvci.Rd  grad.Rd  has_tipvals.Rd  hess.Rd  lik.Rd  marginal_ci.Rd  nparams_ou.Rd  ou_diagH.Rd  ou_haltlost.Rd  oupar.Rd  parameter_restriction.Rd  reexports.Rd  rglinv.Rd  set_tips.Rd  varest.Rd
src/: Makevars  Makevars.in  chn.f90  chn.mod  dglinv.f90  dglinv.mod  dgpadm.f90  my_confinfo.h.in  my_pragma.h  my_pragma.h.in  oumods.f90  oumods.mod  phytr.c  symbols.rds  test.f90  test_ieee_c.c  test_ieee_fort.f90
tests/: testthat.R
tests/testthat/: test-a0floats.R  test-env.R  test-misc.R  test-model-no-restriction.R  test-model-with-restriction.R
vignettes/: Getting_Started.Rnw
